# Contextra

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
configs/: default.toml
docs/: api.md  architecture.md  context-engine.md  development.md  libraries.md  memory.md  orchestration.md  providers.md  retrieval.md  services.md  storage.md  workspace.md
libs/auth/: Cargo.toml
libs/auth/src/: lib.rs
libs/common/: Cargo.toml
libs/common/src/: id.rs  lib.rs  pagination.rs  text.rs  time.rs
libs/config/: Cargo.toml
libs/config/src/: config.rs  errors.rs  lib.rs
libs/context/: Cargo.toml
libs/embeddings/: Cargo.toml
libs/embeddings/src/: lib.rs
libs/errors/: Cargo.toml
libs/errors/src/: lib.rs
libs/evaluation/: Cargo.toml
libs/ingestion/: Cargo.toml
libs/ingestion/src/: lib.rs
libs/memory/: Cargo.toml
libs/memory/src/: lib.rs
libs/orchestration/: Cargo.toml
libs/prompts/: Cargo.toml
libs/prompts/src/: lib.rs
libs/providers/: Cargo.toml
libs/providers/src/: lib.rs
libs/retrieval/: Cargo.toml
libs/retrieval/src/: lib.rs
libs/settings/: Cargo.toml
libs/settings/src/: error.rs  lib.rs  settings.rs
libs/storage/: Cargo.toml
libs/storage/migrations/: 20240101000000_init.sql
libs/storage/src/: api_key.rs  cache.rs  conversation.rs  db.rs  document.rs  lib.rs  repository.rs  session_store.rs  tests.rs  vector_store.rs
libs/telemetry/: Cargo.toml
libs/telemetry/src/: lib.rs  metrics.rs  settings.rs
libs/types/: Cargo.toml
libs/types/src/: lib.rs
tests/fixtures/: sample.html  sample.md  sample.txt
