[workspace]
resolver = "2"

members = [
    # Applications
    "services/gateway",
    "services/worker",
    "services/cli",

    # Libraries
    "libs/common",
    "libs/config",
    "libs/telemetry",
    "libs/errors",
    "libs/types",
    "libs/auth",
    "libs/storage",
    "libs/providers",
    "libs/embeddings",
    "libs/retrieval",
    "libs/memory",
    "libs/context",
    "libs/prompts",
    "libs/ingestion",
    "libs/orchestration",
    "libs/evaluation",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Soumya Surana"]
repository = "https://github.com/soumyasurana/Contextra"
rust-version = "1.90"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
bytes = "1"
futures = "0.3"
http = "1"
http-body-util = "0.1"
mime = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dotenvy = "0.15"
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-otlp = "0.30"
axum = "0.8"
rstest = "0.26"
tempfile = "3"
mockall = "0.13"
tower = "0.5"
tower-http = "0.6"
uuid = { version = "1", features = ["v7", "serde"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }
redis = { version = "0.32", features = ["tokio-comp"] }
validator = { version = "0.20", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"