[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
embeddings = { path = "../embeddings" }
errors = { path = "../errors" }
pdf-extract = "0.7"
scraper = "0.22"
serde_json = "1"
storage = { path = "../storage" }
types = { path = "../types" }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
