[package]
name = "providers"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
errors = { path = "../errors" }
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
settings = { path = "../settings" }
thiserror.workspace = true
tokio = { version = "1", features = ["time"] }

[lints]
workspace = true

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
