[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
types = { path = "../types" }
errors = { path = "../errors" }
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true