[package]
name = "telemetry"
version = "0.1.0"
edition = "2024"

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry"
]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
metrics = "0.24"
serde = { workspace = true }

# OTel dependencies
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", optional = true, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = { version = "0.28", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true